package com.gerenciamento.domain.model;

public enum ProjectStatus {
    PENDING,
    IN_PROGRESS,
    FINISHED
}
