package com.gerenciamento.domain.model;

public enum TaskStatus {
    PENDING,
    IN_PROGRESS,
    FINISHED
}
